Avoiding scrollbar

--- a/layout.css
+++ b/layout.css
@@ -20,8 +20,8 @@ html{
 
 .title{
     display: block;
-    margin-bottom: 0%;
     margin: auto;
+    margin-bottom: 0%;
     /* width: 50%; */
     text-align: center;
     color: rgb(0, 0, 0);
@@ -30,8 +30,8 @@ html{
 
 .subtitle {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin-top: 0.5%;
+    /* margin-right: auto; */
     /* width: 50%; */
     text-align: center;
     color: rgb(0, 0, 0);
